# angrop

./: .gitignore  .gitlab-ci.yml  Dockerfile  README-RiscyROP.md  README.md  angrop.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  question.yml
.github/workflows/: ci.yml  release.yml
angrop/: __init__.py  angrop_cli.py  arch.py  chain_builder.py  common.py  errors.py  gadget_analyzer.py  rop.py  rop_block.py  rop_chain.py  rop_effect.py  rop_gadget.py  rop_utils.py  rop_value.py  sigreturn.py  value.py
angrop/chain_builder/: __init__.py  builder.py  func_caller.py  mem_changer.py  mem_writer.py  pivot.py  reg_mover.py  reg_setter.py  shifter.py  sigreturn.py  sys_caller.py
angrop/gadget_finder/: __init__.py  gadget_analyzer.py
docs/: pythonapi.md
examples/linux_escape_chain/: payload_code.txt  pp.txt  solve.py
tests/: 0b32aa01_01_gadgets  arm_manysum_test_gadgets  datadep_test_gadgets  test_backend.py  test_badbytes.py  test_chainbuilder.py  test_csu_init.py  test_find_gadgets.py  test_gadgets.py  test_performance.py  test_rop.py  test_ropblock.py  test_ropchain.py
