[metadata]
name = angrop
version = attr: angrop.__version__
url = https://github.com/angr/angrop
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
license = BSD 2 Clause
license_files = LICENSE
description = The rop chain builder based off of angr
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    angr
    tqdm
python_requires = >= 3.6
packages = find:
